Bump (#86)
* Revert "Auth via tokenkeeper (#73)"

This reverts commit 520a524690bbc53d967793b40fdcab0faccc09a9.

* Bump deps + remove payout

* Replace vortigon with dominant

* Bump gh actions

* Bump deps + cleanup

* Update deprecated properties

* upd swag